Gdev 1444 (#16)
Added more OpenAPI customization
